--- a/css/style.css
+++ b/css/style.css
@@ -135,11 +135,91 @@ section.intro {
 
 .herotext {
     color: #fff;
-    font-size: 2.0rem;
+    font-size: 2.1rem;
+    text-align: center;
+    padding-top: 40px;
 }
 
+.wrapper {
+    text-align: center;
+}
+
+
 .btn-readmore {
+    display: inline-block; 
+    padding: 10px;
+    width: 150px;
+    height: 50px;
+    border: 1px solid #fff;
+    text-align: center;
+    font-size: 2.0rem;
     color: #fff;
     text-decoration: none;
+    background: none;
 }
+
+.btn-readmore:hover, .btn-readmore:active {
+    background: #fff;
+    color: #583432;
+}
+
+.about {
+    background: #e6304b;
+    color: #fff;
+    text-align: center;
+    padding: 10px 25px;
+}
+
+.aboutheading {
+    font-size: 2.2rem;
+}
+
+.servicesheading {
+    color: #000;
+    font-size: 2.2rem;
+    text-align: center;
+}
+
+.subheadings {
+    display: block;
+    margin: 10px;
+    background: #000;
+    color: #fff;
+    text-align: center;
+    padding: 15px;
+}
+
+section img {
+    height: 354px;
+    margin: 10px;
+}
+
+section p.text {
+    margin: 0 10px 40px 10px;
+}
+
+.contact {
+    text-align: center;
+    margin: 30px;
+    color: #000;
+}
+
+.contactheading {
+
+    font-size: 2.2rem;
+}
+
+footer {
+    background: #000;
+    color: #fff;
+    padding: 30px;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+
+
+
+
+
 
